--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <li class="has-submenu">
           <a href="#">о компании</a>
           <ul class="submenu">
-            <li><a href="https://hsedesign.ru/project/828ed8df809d440294b70166357464f3">История</a></li>
-            <li><a href="https://vikanik08.github.io/parallleex/">Процесс телепортации</a></li>
-            <li><a href="https://www.calameo.com/read/0076696350e498cdb6faf">Лицензия безопасности</a></li>
+            <li><a href="https://hsedesign.ru/project/828ed8df809d440294b70166357464f3" target="_blank" rel="noopener noreferrer">История</a></li>
+            <li><a href="https://vikanik08.github.io/parallleex/" target="_blank" rel="noopener noreferrer">Процесс телепортации</a></li>
+            <li><a href="https://www.calameo.com/read/0076696350e498cdb6faf" target="_blank" rel="noopener noreferrer">Лицензия безопасности</a></li>
           </ul>
         </li>
         <li class="has-submenu">
